@@ -39,6 +39,17 @@ AudioOutputControl::AudioOutputControl(std::unique_ptr<FilteredAudioOutput> _out
 {
 }
 
+AudioOutputControl::AudioOutputControl(AudioOutputControl *_output,
+				       AudioOutputClient &_client) noexcept
+	:output(std::move(_output->Steal())),
+	 name(output->GetName()),
+	 client(_client),
+	 thread(BIND_THIS_METHOD(Task))
+{
+	tags =_output->tags;
+	always_on=_output->always_on;
+}
+
 AudioOutputControl::~AudioOutputControl() noexcept
 {
 	StopThread();
